--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-	url = https://gitlab.com/CLIPOS/assets_toolkit.git/info/lfs
+	url = https://review.clip-os.org/clipos/assets_toolkit.git/info/lfs
